# test_platform

./: .env.example  .example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  README.md  check_logs.py  pyproject.toml  pytest.ini  requirements.txt  test_execute.py  yun.md  测试平台「自动化测试模块」需求点分析（Vue+Django+Pytest+Allure 标准方案）.md
.trae/documents/: automation_debug_plan.md
Django/: __init__.py  asgi.py  settings.py  settings_celery_fallback.py  urls.py  wsgi.py
api_test/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
automation/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
defects/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
environments/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  (+1 more)
logs/: admin.py  apps.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
scripts/: init_db.py  migrate.py
test_cases/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
test_plans/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
tests/: conftest.py  test_api_test.py  test_defects.py  test_environments.py  test_logs.py  test_test_cases.py  test_test_plans.py  test_users.py
users/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
utils/: __init__.py  csrf_middleware.py  exceptions.py  pagination.py  permissions.py  response.py
(+40 files in other folders)
